<resources>
    <string name="app_name">Byron Workshop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_out_title">Sign out</string>
    <string name="sign_out_message">Do you want to close your session?</string>
    <string name="sign_out_ok">OK</string>
    <string name="sign_out_cancel">Cancel</string>
    <string name="nav_header_desc">Account header</string>
    <string name="nav_menu_group_motorcycle">Motorcycle</string>
    <string name="nav_menu_add">Add</string>
    <string name="nav_menu_group_reports">Reports</string>
    <string name="nav_menu_income">Income</string>
    <string name="nav_menu_reminders">Reminders</string>
    <string name="nav_menu_sign_out">Sign out</string>
    <string name="content_main_rv_empty_view_image_desc">Add motorcycle</string>
    <string name="content_main_rv_empty_text">No motorcycles found</string>
    <string name="content_reminders_rv_error_loading">Error loading data</string>
    <string name="firebase_auth_alert_email_verification_title">Verification required</string>
    <string name="firebase_auth_alert_email_verification_msg">Your email is not verified</string>
    <string name="firebase_auth_alert_email_verification_positive">Verify email</string>
    <string name="firebase_auth_alert_email_verification_negative">Close session</string>
    <string name="firebase_auth_alert_email_verification_success">Check you inbox %1$s</string>
    <string name="firebase_auth_alert_email_verification_failure">Please retry. Cannot send verification email</string>
    <string name="menu_action_sign_out">Sign out</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_search">Search</string>
    <string name="bitmap_utils_error_delete_file">Error while deleting image</string>
    <string name="dialog_edit_motorcycle_add_title">Add motorcycle</string>
    <string name="dialog_edit_motorcycle_edit_title">Edit motorcycle</string>
    <string name="dialog_edit_motorcycle_ok">SAVE</string>
    <string name="dialog_edit_motorcycle_cancel">Cancel</string>
    <string name="dialog_edit_motorcycle_writing_storage_denied">Permission denied</string>
    <string name="dialog_edit_motorcycle_avatar_desc">Motorcycle Avatar</string>
    <string name="dialog_edit_motorcycle_pick_image">Pick an image</string>
    <string name="dialog_edit_motorcycle_avatar_image_picker_chooser_title">Source</string>
    <string name="dialog_edit_motorcycle_avatar_image_picker_error">Cannot pick an image. Try again later</string>
    <string name="dialog_edit_motorcycle_brand">Brand</string>
    <string name="dialog_edit_motorcycle_model">Model</string>
    <string name="dialog_edit_motorcycle_type">Type</string>
    <string name="dialog_edit_motorcycle_cc">Cylinder</string>
    <string name="dialog_edit_motorcycle_color">Color</string>
    <string name="dialog_edit_motorcycle_license_plate_number">License plate number</string>
    <string name="dialog_edit_motorcycle_error_avatar">Image is required</string>
    <string name="dialog_edit_motorcycle_error_brand">Brand is required</string>
    <string name="dialog_edit_motorcycle_error_model">Model is required</string>
    <string name="dialog_edit_motorcycle_error_type">Type is required</string>
    <string name="dialog_edit_motorcycle_error_cylinder">Cylinder is required</string>
    <string name="dialog_edit_motorcycle_error_color">Color is required</string>
    <string name="dialog_edit_motorcycle_error_license_plate_number">License plate number is required</string>
    <string name="dialog_edit_motorcycle_error_form">Form contains errors</string>
    <string name="dialog_edit_motorcycle_error_cannot_upload_image">Error while uploading image</string>
    <string name="dialog_edit_motorcycle_error_cannot_save">Error while saving motorcycle</string>
    <string name="dialog_edit_motorcycle_creation_success">Motorcycle created</string>
    <string name="dialog_edit_motorcycle_edition_success">Changes saved</string>
    <string name="dialog_edit_motorcycle_edition_action_view_lbl">Show Motorcycle</string>
    <string name="dialog_edit_motorcycle_uploaded_creation_image_in_process">Motorcycle created\n(processing image)</string>
    <string name="dialog_edit_motorcycle_uploaded_edition_image_in_process">Changes saved\n(processing image)</string>
    <string name="dialog_edit_motorcycle_save_offline_title">Save without image?</string>
    <string name="dialog_edit_motorcycle_save_offline_msg">Images cannot be saved without an internet connection. You can upload an image later on edition</string>
    <string name="dialog_edit_motorcycle_save_offline_continue">CONTINUE</string>
    <string name="dialog_edit_motorcycle_save_offline_cancel">Cancel</string>
    <string name="dialog_edit_motorcycle_progress_label">%1$d%%</string>
    <string name="title_activity_details">Details</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="activity_details_creation_error">You must provide uid and motorcycleId to initiate this activity</string>
    <string name="activity_details_tv_cc">%1$d cc</string>
    <string name="content_details_rv_item_iv_description">Work order</string>
    <string name="content_details_rv_item_iv_options_desc">More options</string>
    <plurals name="content_details_rv_item_image_counter">
        <item quantity="one">%1$d image</item>
        <item quantity="other">%1$d images</item>
    </plurals>
    <string name="content_details_icon_info_desc">Motorcycle information</string>
    <string name="content_details_icon_extras_desc">Motorcycle extra information</string>
    <string name="content_details_switch">Reminder</string>
    <string name="content_details_work_orders_title">Work orders</string>
    <string name="content_details_work_orders_empty_text">No work orders yet</string>
    <string name="content_details_action_delete_title">Delete \"%1$s - %2$s\"?</string>
    <string name="content_details_action_delete_msg">Motorcycle be permanently deleted</string>
    <string name="content_details_action_delete_ok">DELETE</string>
    <string name="content_details_action_delete_cancel">Cancel</string>
    <string name="content_details_action_delete_confirmation">\"%1$s - %2$s\" deleted</string>
    <string name="dialog_edit_work_order_title_new">New work order</string>
    <string name="dialog_edit_work_order_title_edit">Edit work order</string>
    <string name="dialog_edit_work_order_title_closed">Work order</string>
    <string name="dialog_edit_work_order_save">SAVE</string>
    <string name="dialog_edit_work_order_cancel">Cancel</string>
    <string name="dialog_edit_work_order_close">Close</string>
    <string name="dialog_edit_work_order_closed_label">Closed on\n%1$s\n%2$s</string>
    <string name="dialog_edit_work_order_date">Date</string>
    <string name="dialog_edit_work_order_time">Time</string>
    <string name="dialog_edit_work_order_initial_compression">Initial compression</string>
    <string name="dialog_edit_work_order_final_compression">Final compression</string>
    <string name="dialog_edit_work_order_issue">Issue</string>
    <string name="dialog_edit_work_order_others">Others</string>
    <string name="dialog_edit_work_order_title_accessories">Accessories</string>
    <string name="dialog_edit_work_order_accessories_rims">Rims</string>
    <string name="dialog_edit_work_order_accessories_ignition">Ignition</string>
    <string name="dialog_edit_work_order_accessories_battery">Battery</string>
    <string name="dialog_edit_work_order_accessories_central_bipod">Central bipod</string>
    <string name="dialog_edit_work_order_accessories_horn">Horn</string>
    <string name="dialog_edit_work_order_accessories_caps">Caps</string>
    <string name="dialog_edit_work_order_accessories_cdi">CDI</string>
    <string name="dialog_edit_work_order_accessories_ignition_switch">Ignition switch</string>
    <string name="dialog_edit_work_order_accessories_clutch_cable">Clutch cable</string>
    <string name="dialog_edit_work_order_accessories_exhaust">Exhaust</string>
    <string name="dialog_edit_work_order_accessories_headlight">Headlight</string>
    <string name="dialog_edit_work_order_accessories_filters">Filters</string>
    <string name="dialog_edit_work_order_accessories_light_bulbs">Light bulbs</string>
    <string name="dialog_edit_work_order_accessories_brakes">Brakes</string>
    <string name="dialog_edit_work_order_accessories_mudguard">Mudguard</string>
    <string name="dialog_edit_work_order_accessories_winkers">Winkers</string>
    <string name="dialog_edit_work_order_accessories_tools">Tools</string>
    <string name="dialog_edit_work_order_accessories_emblems">Emblems</string>
    <string name="dialog_edit_work_order_accessories_tires">Tires</string>
    <string name="dialog_edit_work_order_accessories_key">Key</string>
    <string name="dialog_edit_work_order_accessories_commands">Commands</string>
    <string name="dialog_edit_work_order_accessories_hoses">Hoses</string>
    <string name="dialog_edit_work_order_accessories_handlebar">Handlebar</string>
    <string name="dialog_edit_work_order_accessories_seat">Seat</string>
    <string name="dialog_edit_work_order_accessories_cat_eyes">Cat eyes</string>
    <string name="dialog_edit_work_order_accessories_levers">Levers</string>
    <string name="dialog_edit_work_order_accessories_racks">Racks</string>
    <string name="dialog_edit_work_order_accessories_paint">Paint</string>
    <string name="dialog_edit_work_order_accessories_tool_holder">Tool holder</string>
    <string name="dialog_edit_work_order_accessories_hand_grips">Hand grips</string>
    <string name="dialog_edit_work_order_accessories_radiator">Radiator</string>
    <string name="dialog_edit_work_order_accessories_rectifier">Rectifier</string>
    <string name="dialog_edit_work_order_accessories_rearview_mirrors">Rearview mirrors</string>
    <string name="dialog_edit_work_order_accessories_electric_system">Electric system</string>
    <string name="dialog_edit_work_order_accessories_license_plate_support">License plate support</string>
    <string name="dialog_edit_work_order_accessories_chain_cover">Chain cover</string>
    <string name="dialog_edit_work_order_accessories_fuel_cap">Fuel cap</string>
    <string name="dialog_edit_work_order_accessories_valve_cover">Valve cover</string>
    <string name="dialog_edit_work_order_accessories_engine_covers">Engine covers</string>
    <string name="dialog_edit_work_order_accessories_side_covers">Side covers</string>
    <string name="dialog_edit_work_order_accessories_upholstery">Upholstery</string>
    <string name="dialog_edit_work_order_accessories_telescopic_fork">Telescopic fork</string>
    <string name="dialog_edit_work_order_accessories_chain_tensioner">Chain tensioner</string>
    <string name="dialog_edit_work_order_accessories_transmission">Transmission</string>
    <string name="dialog_edit_work_order_accessories_speedometer">Speedometer</string>
    <string name="dialog_edit_work_order_prev_maint_title">PREVENTIVE MAINTENANCE</string>
    <string name="dialog_edit_work_order_prev_maint_oil">Oil</string>
    <string name="menu_wo_item_edit_cs">Cost sheet</string>
    <string name="menu_wo_item_upload_images">Images</string>
    <string name="menu_wo_item_delete_wo">Delete</string>
    <string name="menu_wo_item_close_wo">Close</string>
    <string name="dialog_edit_cost_sheet_add_cost_desc">Description</string>
    <string name="dialog_edit_cost_sheet_add_cost_amount">Amount</string>
    <string name="dialog_edit_cost_sheet_add_cost_type_replacement">Replacement</string>
    <string name="dialog_edit_cost_sheet_add_cost_type_external">External labor</string>
    <string name="dialog_edit_cost_sheet_add_cost_type_labor_cost">Labor cost</string>
</resources>