<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_wo_group_common_actions">
        <item
            android:id="@+id/menu_wo_item_edit_cost_sheet"
            android:title="@string/menu_wo_item_edit_cs" />

        <item
            android:id="@+id/menu_wo_item_upload_images"
            android:title="@string/menu_wo_item_upload_images" />
    </group>

    <group android:id="@+id/menu_wo_group_delete">
        <item
            android:id="@+id/menu_wo_item_delete_wo"
            android:title="@string/menu_wo_item_delete_wo" />
    </group>

    <group android:id="@+id/menu_wo_group_close">
        <item
            android:id="@+id/menu_wo_item_close_wo"
            android:title="@string/menu_wo_item_close_wo" />
    </group>
</menu>