<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_main_action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_main_action_sign_out"
        android:orderInCategory="101"
        android:title="@string/menu_action_sign_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_main_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:iconifiedByDefault="true"
        app:showAsAction="collapseActionView|always" />
</menu>
