<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_edit_motorcycle_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/dialog_edit_motorcycle_upload_progress_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/dialog_edit_motorcycle_vertical_padding"
            android:visibility="gone">

            <TextView
                android:id="@+id/dialog_edit_motorcycle_upload_progress_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="0%" />

            <ProgressBar
                android:id="@+id/dialog_edit_motorcycle_upload_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/dialog_edit_motorcycle_scroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dialog_edit_motorcycle_vertical_padding"
                android:paddingEnd="@dimen/dialog_edit_motorcycle_horizontal_padding"
                android:paddingLeft="@dimen/dialog_edit_motorcycle_horizontal_padding"
                android:paddingRight="@dimen/dialog_edit_motorcycle_horizontal_padding"
                android:paddingStart="@dimen/dialog_edit_motorcycle_horizontal_padding"
                android:paddingTop="@dimen/dialog_edit_motorcycle_vertical_padding">

                <FrameLayout
                    android:id="@+id/dialog_edit_motorcycle_avatar_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dialog_edit_motorcycle_avatar_vertical_margin"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <ImageView
                        android:id="@+id/dialog_edit_motorcycle_avatar_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/dialog_edit_motorcycle_avatar_desc"
                        android:maxWidth="@dimen/dialog_edit_motorcycle_max_width_placeholder"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_brand_camera" />

                    <ImageView
                        android:id="@+id/dialog_edit_motorcycle_avatar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/dialog_edit_motorcycle_avatar_desc"
                        android:maxWidth="@dimen/dialog_edit_motorcycle_max_width_placeholder"
                        android:scaleType="fitCenter"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/dialog_edit_motorcycle_button_pick_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dialog_edit_motorcycle_pick_image_margin"
                            android:alpha="0.75"
                            android:drawableLeft="@android:drawable/ic_menu_gallery"
                            android:drawableStart="@android:drawable/ic_menu_gallery"
                            android:text="@string/dialog_edit_motorcycle_pick_image"
                            android:theme="@style/ThemeOverlay.AppCompat.Dark"
                            app:backgroundTint="@color/colorAccent" />

                        <TextView
                            android:id="@+id/dialog_edit_motorcycle_avatar_error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/dialog_edit_motorcycle_error_avatar"
                            android:textColor="?attr/colorError"
                            android:visibility="gone" />
                    </LinearLayout>
                </FrameLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dialog_edit_motorcycle_input_layout_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/dialog_edit_motorcycle_brand"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/dialog_edit_motorcycle_brand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dialog_edit_motorcycle_brand"
                        android:inputType="textCapCharacters"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dialog_edit_motorcycle_input_layout_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/dialog_edit_motorcycle_model"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/dialog_edit_motorcycle_model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dialog_edit_motorcycle_model"
                        android:inputType="textCapCharacters"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dialog_edit_motorcycle_input_layout_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/dialog_edit_motorcycle_type"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/dialog_edit_motorcycle_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dialog_edit_motorcycle_type"
                        android:inputType="textCapCharacters"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dialog_edit_motorcycle_input_layout_cc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/dialog_edit_motorcycle_cc"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/dialog_edit_motorcycle_cc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dialog_edit_motorcycle_cc"
                        android:inputType="number"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dialog_edit_motorcycle_input_layout_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/dialog_edit_motorcycle_color"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/dialog_edit_motorcycle_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dialog_edit_motorcycle_color"
                        android:inputType="textCapCharacters"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dialog_edit_motorcycle_input_layout_license_plate_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/dialog_edit_motorcycle_edit_license_plate_number"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/dialog_edit_motorcycle_edit_license_plate_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dialog_edit_motorcycle_license_plate_number"
                        android:inputType="textCapCharacters"
                        android:maxLines="1"
                        tools:ignore="TextFields" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>