<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_edit_cost_sheet_add_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingStart="@dimen/dialog_edit_cost_sheet_horizontal_padding"
            android:paddingLeft="@dimen/dialog_edit_cost_sheet_horizontal_padding"
            android:paddingTop="@dimen/dialog_edit_cost_sheet_vertical_padding"
            android:paddingEnd="@dimen/dialog_edit_cost_sheet_horizontal_padding"
            android:paddingRight="@dimen/dialog_edit_cost_sheet_horizontal_padding"
            android:paddingBottom="@dimen/dialog_edit_cost_sheet_vertical_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_edit_cost_sheet_add_input_layout_add_cost_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/dialog_edit_cost_sheet_add_cost_desc"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/dialog_edit_cost_sheet_add_cost_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_edit_cost_sheet_add_cost_desc"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    tools:ignore="Autofill,LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_edit_cost_sheet_add_input_layout_add_cost_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/dialog_edit_cost_sheet_add_amount"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/dialog_edit_cost_sheet_add_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_edit_cost_sheet_add_cost_amount"
                    android:inputType="number"
                    android:maxLines="1"
                    tools:ignore="Autofill,LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dialog_edit_cost_sheet_add_cost_margin_right"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/dialog_edit_cost_sheet_add_cost_type_replacement"
                        android:paddingTop="@dimen/dialog_edit_cost_sheet_add_cost_padding_vertical"
                        android:paddingBottom="@dimen/dialog_edit_cost_sheet_add_cost_padding_vertical"
                        app:srcCompat="@drawable/ic_cost_replacement" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/dialog_edit_cost_sheet_add_cost_type_external"
                        android:paddingTop="@dimen/dialog_edit_cost_sheet_add_cost_padding_vertical"
                        android:paddingBottom="@dimen/dialog_edit_cost_sheet_add_cost_padding_vertical"
                        app:srcCompat="@drawable/ic_cost_external" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/dialog_edit_cost_sheet_add_cost_type_labor_cost"
                        android:paddingTop="@dimen/dialog_edit_cost_sheet_add_cost_padding_vertical"
                        android:paddingBottom="@dimen/dialog_edit_cost_sheet_add_cost_padding_vertical"
                        app:srcCompat="@drawable/ic_cost_labor" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/dialog_edit_cost_sheet_add_cost_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/dialog_edit_cost_sheet_add_cost_type_replacement"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:paddingTop="@dimen/dialog_edit_cost_sheet_add_cost_padding_vertical"
                        android:paddingBottom="@dimen/dialog_edit_cost_sheet_add_cost_padding_vertical"
                        android:text="@string/dialog_edit_cost_sheet_add_cost_type_replacement" />

                    <RadioButton
                        android:id="@+id/dialog_edit_cost_sheet_add_cost_type_external"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/dialog_edit_cost_sheet_add_cost_padding_vertical"
                        android:paddingBottom="@dimen/dialog_edit_cost_sheet_add_cost_padding_vertical"
                        android:text="@string/dialog_edit_cost_sheet_add_cost_type_external" />

                    <RadioButton
                        android:id="@+id/dialog_edit_cost_sheet_add_cost_type_labor_cost"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/dialog_edit_cost_sheet_add_cost_padding_vertical"
                        android:paddingBottom="@dimen/dialog_edit_cost_sheet_add_cost_padding_vertical"
                        android:text="@string/dialog_edit_cost_sheet_add_cost_type_labor_cost" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>